# mre-bzl-goland-2024

./: .bazelignore  .gitignore  BUILD.bazel  MODULE.bazel  README.md
proto/helloworld/: BUILD.bazel  helloworld.proto
src/apps/: go.mod
src/apps/greeter/client/: BUILD.bazel  main.go
src/apps/greeter/server/: BUILD.bazel  main.go
