load("@gazelle//:def.bzl", "gazelle")

# gazelle:exclude .git/
# gazelle:exclude pkg/
# gazelle:exclude build/
# gazelle:go_grpc_compilers	@rules_go//proto:go_grpc
# gazelle:go_proto_compilers @rules_go//proto:go_proto
# gazelle:go_naming_convention go_default_library
# gazelle:go_naming_convention_external go_default_library
gazelle(
    name = "gazelle",
)
