load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "helloworldpb_proto",
    srcs = ["helloworld.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "helloworldpb_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "proto/helloworld",
    proto = ":helloworldpb_proto",
    visibility = ["//visibility:public"],
)
